--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "@nuxt/content": "^1.5.0",
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "nuxt": "^2.14.0"
+    "highlight.js": "^10.2.0",
+    "hljs": "^6.2.3",
+    "nuxt": "^2.14.0",
+    "remark-bookmarks": "^3.0.0",
+    "vue-hljs": "^1.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
