--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "test": "jest"
   },
   "dependencies": {
-    "@nuxt/content": "^1.5.0",
-    "@nuxtjs/axios": "^5.12.0",
-    "@nuxtjs/pwa": "^3.0.0-beta.20",
-    "highlight.js": "^10.2.0",
+    "@nuxt/content": "^1.14.0",
+    "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/pwa": "^3.3.5",
+    "highlight.js": "^10.7.3",
     "hljs": "^6.2.3",
-    "nuxt": "^2.14.0",
+    "nuxt": "^2.15.8",
     "remark-bookmarks": "^3.0.0",
     "vue-hljs": "^1.1.2"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
-    "@nuxtjs/vuetify": "^1.11.2",
-    "@vue/test-utils": "^1.0.3",
+    "@nuxtjs/vuetify": "^1.12.1",
+    "@vue/test-utils": "^1.2.2",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.1.0",
-    "eslint": "^7.5.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "^7.32.0",
     "eslint-plugin-nuxt": "^1.0.0",
-    "jest": "^26.1.0",
-    "vue-jest": "^3.0.4"
+    "jest": "^26.6.3",
+    "vue-jest": "^3.0.7"
   }
 }
